demo-kubernetes-components/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mongo-express-service
              port:
                number: 80
